--- a/main.html
+++ b/main.html
@@ -7,10 +7,35 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<table style="background-color: yellow; border: 1px solid black; border-collapse: collapse;">
+		<caption>Student Details</caption>
+		<thead>
+			<tr>
+				<th style="border: 1px solid black;">NAME</th>
+				<th style="border: 1px solid black;">AGE</th>
+				<th style="border: 1px solid black;">BRANCH</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td style="border: 1px solid black;">Rahul</td>
+				<td style="border: 1px solid black;">20</td>
+				<td style="border: 1px solid black;">CSE</td>
+			</tr>
+			<tr>
+				<td style="border: 1px solid black;">Anjali</td>
+				<td style="border: 1px solid black;">21</td>
+				<td style="border: 1px solid black;">IT</td>
+			</tr>
+			<tr>
+				<td style="border: 1px solid black;">Aman</td>
+				<td style="border: 1px solid black;">22</td>
+				<td style="border: 1px solid black;">ECE</td>
+			</tr>
+		</tbody>
+	</table>
 
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
